# self-corrective-rag-idp

./: LICENSE  README.md  app.py  create_chromadb.py  metadata_store.json  pyproject.toml
chromadb/: chroma.sqlite3
utils/: README.md  build_rag.py  data_gatherer.py  llm.py  pyproject.toml
